@@ -226,6 +226,9 @@ k_dcop:
     void setInsertDirectCursor(bool _b);
 
 
+    void setBackupFileExtension( const QString & _ext );
+    QString backupFileExtension()const;
+
 private:
     KWDocument *doc;
 
