@@ -423,6 +423,7 @@ void KWDocument::initConfig()
       int defaultAutoSave = KoDocument::defaultAutoSave()/60; // in minutes
       setAutoSave(config->readNumEntry("AutoSave",defaultAutoSave)*60); // read key in minutes, call setAutoSave(seconds)
       setBackupFile( config->readNumEntry("BackupFile", true));
+      setBackupFileExtension( config->readEntry("BackupFileExtension", QString::fromLatin1("~")));
 
       setNbPagePerRow(config->readNumEntry("nbPagePerRow",4));
       m_maxRecentFiles = config->readNumEntry( "NbRecentFile", 10 );
