@@ -493,6 +493,11 @@ public:
 
     bool backupFile()const;
 
+    void setBackupFileExtension( const QString & _ext );
+
+    QString backupFileExtension()const;
+
+
 signals:
     /**
      * This signal is emitted, if a direct or indirect child document changes
